# default-ds-project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
default_ds_project/: __init__.py  dataset.py  features.py  plots.py
default_ds_project/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
